Revert pgn-player wrapper/container/board-wrap to fixed px widths

--- a/assets/ChessPublica.css
+++ b/assets/ChessPublica.css
@@ -68,8 +68,8 @@
 /* WRAPPER */
 
 .player-wrapper {
-  width: 100%;
-  max-width: 360px; /* 350px board + 10px eval bar */
+  width: 360px; /* 350px board + 10px eval bar */
+  max-width: 100vw;
   min-height: 500px;
   position: relative;
   margin: 0;
@@ -109,14 +109,13 @@
   position: relative;
   display: flex;
   flex-direction: row;
-  width: 100%;
+  width: 360px; /* 350px board + 10px eval bar */
 }
 
 /* BOARD WRAP */
 
 .board-wrap {
-  flex: 1;
-  min-width: 0;
+  width: 350px;
   position: relative;
 }
 
